--- a/escom-bpm-web/src/main/webapp/view/companies/company-explorer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/companies/company-explorer.xhtml
@@ -1,10 +1,17 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
                 xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
                 xmlns:p="http://primefaces.org/ui"
-                template="/view/templ/templ-explorer.xhtml">
+                template="/view/templ/templ-explorer.xhtml"
+                xmlns:f="http://xmlns.jcp.org/jsf/core">
 
     <!-- Используется как селектор компаний ! -->
-
+    <ui:define name="preRendered">
+        <f:metadata>
+            <f:viewAction action="#{companyExplBean.onBeforeOpenCard()}"/>
+            <f:viewAction action="#{companyExplBean.onAfterFormLoad()}"/>
+        </f:metadata>
+    </ui:define>
+       
     <ui:param name="_explorerBean" value="#{companyExplBean}"/>
     <ui:param name="_treeBean" value="#{companyBean}" />
     <ui:param name="_detailBean" value="#{departmentBean}" />
