--- a/escom-bpm-web/src/main/webapp/view/docs/attaches/add-attache.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/docs/attaches/add-attache.xhtml
@@ -8,7 +8,7 @@
 
     <ui:define name="preRendered">
         <f:metadata>
-            <f:event type="preRenderView" listener="#{addAttacheBean.onBeforeOpenCard()}"/>
+            <f:viewAction action="#{addAttacheBean.onBeforeOpenCard()}"/>
         </f:metadata>
     </ui:define>
 
