--- a/escom-bpm-web/src/main/webapp/view/folders/folder-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/folders/folder-card.xhtml
@@ -7,6 +7,13 @@
 
     <ui:param name="_bean" value="#{foldersCardBean}"/>  
 
+    <ui:define name="preRendered">
+        <f:metadata>
+            <f:viewAction action="#{foldersCardBean.onBeforeOpenCard()}"/>
+            <f:viewAction action="#{foldersCardBean.onAfterFormLoad()}"/>
+        </f:metadata>
+    </ui:define>
+    
     <ui:define name="extColumnsRights">
         <p:column headerText="#{bundle.CreateSubfolders}" styleClass="colRight">
             <p:selectBooleanCheckbox value="#{right.addChild}" disabled="#{_bean.editedItem.inherits or _bean.isReadOnly()}"/>
