--- a/escom-bpm-web/src/main/webapp/view/processes/templ/proctempl-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/processes/templ/proctempl-card.xhtml
@@ -1,8 +1,16 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-                template="/view/templ/templ-card.xhtml">
+                template="/view/templ/templ-card.xhtml"
+                xmlns:f="http://xmlns.jcp.org/jsf/core">
 
+    <ui:define name="preRendered">
+        <f:metadata>
+            <f:viewAction action="#{procTemplCardBean.onBeforeOpenCard()}"/>
+            <f:viewAction action="#{procTemplCardBean.onAfterFormLoad()}"/>
+        </f:metadata>
+    </ui:define>
+    
     <ui:param name="_bean" value="#{procTemplCardBean}"/>
 
     <ui:define name="page_body">
