--- a/escom-bpm-web/src/main/webapp/view/tasks/task-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/tasks/task-card.xhtml
@@ -7,6 +7,13 @@
 
     <ui:param name="_bean" value="#{taskCardBean}"/>
    
+    <ui:define name="preRendered">
+        <f:metadata>
+            <f:viewAction action="#{taskCardBean.onBeforeOpenCard()}"/>
+            <f:viewAction action="#{taskCardBean.onAfterFormLoad()}"/>
+        </f:metadata>
+    </ui:define>
+    
     <ui:define name="specActionMenu" >
     </ui:define>
 
