--- a/escom-bpm-web/src/main/webapp/view/admin/help/help-view.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/admin/help/help-view.xhtml
@@ -1,12 +1,17 @@
 <ui:composition  xmlns="http://www.w3.org/1999/xhtml"
                  xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-                 xmlns:p="http://primefaces.org/ui"
                  xmlns:f="http://xmlns.jcp.org/jsf/core"
                  xmlns:pe="http://primefaces.org/ui/extensions"
-                 xmlns:h="http://xmlns.jcp.org/jsf/html"
                  template="/view/templ/templ-dlg.xhtml">
 
 
+    <ui:define name="preRendered">
+        <f:metadata>
+            <f:viewAction action="#{helpBean.onBeforeOpenCard()}"/>
+            <f:viewAction action="#{helpBean.onAfterFormLoad()}"/>
+        </f:metadata>
+    </ui:define>
+    
     <ui:define name="title">
         #{bundle.ManualBook}
     </ui:define>
