--- a/escom-bpm-web/src/main/webapp/view/admin/license/license-view.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/admin/license/license-view.xhtml
@@ -3,8 +3,16 @@
                  xmlns:p="http://primefaces.org/ui"
                  xmlns:pe="http://primefaces.org/ui/extensions"
                  xmlns:h="http://xmlns.jcp.org/jsf/html"
-                 template="/view/templ/templ-dlg.xhtml">
+                 template="/view/templ/templ-dlg.xhtml"
+                 xmlns:f="http://xmlns.jcp.org/jsf/core">
 
+    <ui:define name="preRendered">
+        <f:metadata>
+            <f:viewAction action="#{licenseBean.onBeforeOpenCard()}"/>
+            <f:viewAction action="#{licenseBean.onAfterFormLoad()}"/>
+        </f:metadata>
+    </ui:define>
+    
     <ui:param name="_bean" value="#{licenseBean}"/>
     <ui:param name="_canNotClose" value="#{!sessionBean.userSettings.agreeLicense}"/>
 
