--- a/escom-bpm-web/src/main/webapp/view/admin/update/check-release.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/admin/update/check-release.xhtml
@@ -6,6 +6,13 @@
                  xmlns:h="http://xmlns.jcp.org/jsf/html"
                  template="/view/templ/templ-dlg.xhtml">
 
+    <ui:define name="preRendered">
+        <f:metadata>
+            <f:viewAction action="#{checkReleaseBean.onBeforeOpenCard()}"/>
+            <f:viewAction action="#{checkReleaseBean.onAfterFormLoad()}"/>
+        </f:metadata>
+    </ui:define>
+    
     <ui:param name="_bean" value="#{checkReleaseBean}"/>
         
     <ui:define name="systems">
