--- a/escom-bpm-web/src/main/webapp/view/docs/docStatus/statusesdoc-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/docs/docStatus/statusesdoc-card.xhtml
@@ -2,10 +2,18 @@
                 xmlns:h="http://xmlns.jcp.org/jsf/html"
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-                template="/view/templ/templ-card.xhtml">
+                template="/view/templ/templ-card.xhtml"
+                xmlns:f="http://xmlns.jcp.org/jsf/core">
 
     <ui:param name="_bean" value="#{statusesDocCardBean}"/>
 
+    <ui:define name="preRendered">
+        <f:metadata>
+            <f:viewAction action="#{statusesDocCardBean.onBeforeOpenCard()}"/>
+            <f:viewAction action="#{statusesDocCardBean.onAfterFormLoad()}"/>
+        </f:metadata>
+    </ui:define>
+    
     <ui:define name="page_body">
                 
           <p:tab id="cardTab" title="#{bundle.Explorer}">     
