--- a/escom-bpm-web/src/main/webapp/view/docs/docTypes/doctype-group-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/docs/docTypes/doctype-group-card.xhtml
@@ -2,10 +2,18 @@
                 xmlns:h="http://xmlns.jcp.org/jsf/html"
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-                template="/view/templ/templ-card.xhtml">
+                template="/view/templ/templ-card.xhtml"
+                xmlns:f="http://xmlns.jcp.org/jsf/core">
 
     <ui:param name="_bean" value="#{docTypeGroupsCardBean}"/>
-        
+     
+    <ui:define name="preRendered">
+        <f:metadata>
+            <f:viewAction action="#{docTypeGroupsCardBean.onBeforeOpenCard()}"/>
+            <f:viewAction action="#{docTypeGroupsCardBean.onAfterFormLoad()}"/>
+        </f:metadata>
+    </ui:define>
+    
     <ui:define name="page_body">
         <p:tab title="#{bundle.Explorer}">
             <p:panelGrid columns="1" styleClass="ui-grid-col-12 ui-panelgrid-blank" columnClasses="ui-grid-col-12" >
