--- a/escom-bpm-web/src/main/webapp/view/folders/folder-explorer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/folders/folder-explorer.xhtml
@@ -1,9 +1,17 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
                 xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-                template="/view/templ/templ-explorer.xhtml">
+                template="/view/templ/templ-explorer.xhtml"
+                xmlns:f="http://xmlns.jcp.org/jsf/core">
 
     <!-- используется в качестве селектора папок -->
 
+    <ui:define name="preRendered">
+        <f:metadata>
+            <f:viewAction action="#{folderExplBean.onBeforeOpenCard()}"/>
+            <f:viewAction action="#{folderExplBean.onAfterFormLoad()}"/>
+        </f:metadata>
+    </ui:define>
+    
     <ui:param name="_explorerBean" value="#{folderExplBean}" />
     <ui:param name="_treeBean" value="#{foldersBean}" />
     <ui:param name="_detailBean" value="#{docBean}" />
