--- a/escom-bpm-web/src/main/webapp/view/partners/partner-explorer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/partners/partner-explorer.xhtml
@@ -2,8 +2,16 @@
                 xmlns:ui="http://xmlns.jcp.org/jsf/facelets"                
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:h="http://xmlns.jcp.org/jsf/html"
-                template="/view/templ/templ-explorer.xhtml">
+                template="/view/templ/templ-explorer.xhtml"
+                xmlns:f="http://xmlns.jcp.org/jsf/core">
 
+    <ui:define name="preRendered">
+        <f:metadata>
+            <f:viewAction action="#{explorerTreeBean.onBeforeOpenCard()}"/>
+            <f:viewAction action="#{explorerTreeBean.onAfterFormLoad()}"/>
+        </f:metadata>
+    </ui:define>
+    
     <ui:param name="_explorerBean" value="#{explorerTreeBean}" />
     <ui:param name="_detailBean" value="#{partnersBean}" />
     <ui:param name="_treeBean" value="#{partnersGroupsBean}" /> 
