--- a/escom-bpm-web/src/main/webapp/view/processes/elements/condition-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/processes/elements/condition-card.xhtml
@@ -7,6 +7,13 @@
 
     <ui:param name="_bean" value="#{conditionCardBean}"/>
 
+    <ui:define name="preRendered">
+        <f:metadata>
+            <f:viewAction action="#{conditionCardBean.onBeforeOpenCard()}"/>
+            <f:viewAction action="#{conditionCardBean.onAfterFormLoad()}"/>
+        </f:metadata>
+    </ui:define>
+    
     <ui:define name="title">
         #{bundle.Condition}
     </ui:define>
