--- a/escom-bpm-web/src/main/webapp/view/processes/elements/doc-status-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/processes/elements/doc-status-card.xhtml
@@ -6,6 +6,13 @@
 
     <ui:param name="_bean" value="#{docStatusCardBean}"/>
 
+    <ui:define name="preRendered">
+        <f:metadata>
+            <f:viewAction action="#{docStatusCardBean.onBeforeOpenCard()}"/>
+            <f:viewAction action="#{docStatusCardBean.onAfterFormLoad()}"/>
+        </f:metadata>
+    </ui:define>
+    
     <ui:define name="title">
         #{bundle.SetDocStatus}
     </ui:define>s
