--- a/escom-bpm-web/src/main/webapp/view/processes/process-explorer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/processes/process-explorer.xhtml
@@ -1,12 +1,19 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
-                xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-                template="/view/templ/templ-explorer.xhtml"
+                xmlns:ui="http://xmlns.jcp.org/jsf/facelets"                
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:h="http://xmlns.jcp.org/jsf/html"
-                xmlns:f="http://xmlns.jcp.org/jsf/core">
+                xmlns:f="http://xmlns.jcp.org/jsf/core"
+                template="/view/templ/templ-explorer.xhtml">
 
     <!-- стандарный обозреватель/селектор -->
 
+    <ui:define name="preRendered">
+        <f:metadata>
+            <f:viewAction action="#{explorerTreeBean.onBeforeOpenCard()}"/>
+            <f:viewAction action="#{explorerTreeBean.onAfterFormLoad()}"/>
+        </f:metadata>
+    </ui:define>
+    
     <ui:param name="_explorerBean" value="#{explorerTreeBean}" />
     <ui:param name="_treeBean" value="#{processTypesBean}" />
     <ui:param name="_detailBean"  value="#{processBean}"/>
