--- a/escom-bpm-web/src/main/webapp/view/processes/templ/proctempl-explorer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/processes/templ/proctempl-explorer.xhtml
@@ -2,10 +2,18 @@
                 xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
                 template="/view/templ/templ-explorer.xhtml"
                 xmlns:p="http://primefaces.org/ui"
-                xmlns:h="http://xmlns.jcp.org/jsf/html">
+                xmlns:h="http://xmlns.jcp.org/jsf/html"
+                xmlns:f="http://xmlns.jcp.org/jsf/core">
 
     <!-- стандарный обозреватель/селектор -->
 
+    <ui:define name="preRendered">
+        <f:metadata>
+            <f:viewAction action="#{explorerTreeBean.onBeforeOpenCard()}"/>
+            <f:viewAction action="#{explorerTreeBean.onAfterFormLoad()}"/>
+        </f:metadata>
+    </ui:define>
+    
     <ui:param name="_explorerBean" value="#{explorerTreeBean}" />
     <ui:param name="_treeBean" value="#{processTypesTemplBean}" />
     <ui:param name="_detailBean"  value="#{procTemplBean}"/>
