--- a/escom-bpm-web/src/main/webapp/view/services/mail/message.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/services/mail/message.xhtml
@@ -2,7 +2,6 @@
                 xmlns:h="http://xmlns.jcp.org/jsf/html"
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:f="http://xmlns.jcp.org/jsf/core"
-                xmlns:pe="http://primefaces.org/ui/extensions"
                 xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
                 template="/view/templ/templ-dlg.xhtml">
 
@@ -10,6 +9,13 @@
         #{bundle.MailMessage}
     </ui:define>
 
+    <ui:define name="preRendered">
+        <f:metadata>
+            <f:viewAction action="#{mailMessageBean.onBeforeOpenCard()}"/>
+            <f:viewAction action="#{mailMessageBean.onAfterFormLoad()}"/>
+        </f:metadata>
+    </ui:define>
+    
     <ui:param name="_bean" value="#{mailMessageBean}"/>
 
     <ui:define name="menuActions" >
