--- a/escom-bpm-web/src/main/webapp/view/staffs/posts/post-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/staffs/posts/post-card.xhtml
@@ -2,8 +2,16 @@
                 xmlns:h="http://xmlns.jcp.org/jsf/html"
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-                template="/view/templ/templ-card.xhtml">
+                template="/view/templ/templ-card.xhtml"
+                xmlns:f="http://xmlns.jcp.org/jsf/core">
 
+    <ui:define name="preRendered">
+        <f:metadata>
+            <f:viewAction action="#{postCardBean.onBeforeOpenCard()}"/>
+            <f:viewAction action="#{postCardBean.onAfterFormLoad()}"/>
+        </f:metadata>
+    </ui:define>
+    
     <ui:param name="_bean" value="#{postCardBean}"/>
 
     <ui:define name="page_body">
