--- a/escom-bpm-web/src/main/webapp/view/staffs/staff-explorer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/staffs/staff-explorer.xhtml
@@ -2,10 +2,18 @@
                 xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:h="http://xmlns.jcp.org/jsf/html"
-                template="/view/templ/templ-explorer.xhtml">
+                template="/view/templ/templ-explorer.xhtml"
+                xmlns:f="http://xmlns.jcp.org/jsf/core">
 
     <!-- стандарный обозреватель/селектор для Штатных единиц -->
 
+    <ui:define name="preRendered">
+        <f:metadata>
+            <f:viewAction action="#{companyExplBean.onBeforeOpenCard()}"/>
+            <f:viewAction action="#{companyExplBean.onAfterFormLoad()}"/>
+        </f:metadata>
+    </ui:define>
+    
     <ui:param name="_explorerBean" value="#{companyExplBean}"/>
     <ui:param name="_rootBean"    value="#{companyBean}"/> 
     <ui:param name="_treeBean"    value="#{departmentBean}"/> 
