--- a/escom-bpm-web/src/main/webapp/view/tasks/scheduler.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/tasks/scheduler.xhtml
@@ -2,12 +2,20 @@
                  xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
                  xmlns:p="http://primefaces.org/ui"
                  xmlns:h="http://xmlns.jcp.org/jsf/html"
-                 template="/view/templ/templ-dlg.xhtml">
+                 template="/view/templ/templ-dlg.xhtml"
+                 xmlns:f="http://xmlns.jcp.org/jsf/core">
 
     <ui:define name="title">
         #{bundle.Scheduler}
     </ui:define>
 
+    <ui:define name="preRendered">
+        <f:metadata>
+            <f:viewAction action="#{schedulerBean.onBeforeOpenCard()}"/>
+            <f:viewAction action="#{schedulerBean.onAfterFormLoad()}"/>
+        </f:metadata>
+    </ui:define>
+    
     <ui:param name="_bean" value="#{schedulerBean}"/>
 
     <ui:define name="menuActions" >
