--- a/escom-bpm-web/src/main/webapp/view/users/assistants/assistant-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/users/assistants/assistant-card.xhtml
@@ -5,6 +5,13 @@
                 xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
                 template="/view/templ/templ-card.xhtml">
 
+    <ui:define name="preRendered">
+        <f:metadata>
+            <f:viewAction action="#{assistantCardBean.onBeforeOpenCard()}"/>
+            <f:viewAction action="#{assistantCardBean.onAfterFormLoad()}"/>
+        </f:metadata>
+    </ui:define>
+    
     <ui:param name="_bean" value="#{assistantCardBean}"/>
 
     <ui:define name="page_body">
