--- a/escom-bpm-web/src/main/webapp/view/users/groupsUsers/usergroup-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/users/groupsUsers/usergroup-card.xhtml
@@ -1,10 +1,16 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
-                xmlns:h="http://xmlns.jcp.org/jsf/html"
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
                 template="/view/templ/templ-card.xhtml"
                 xmlns:f="http://xmlns.jcp.org/jsf/core">
 
+    <ui:define name="preRendered">
+        <f:metadata>
+            <f:viewAction action="#{userGroupsCardBean.onBeforeOpenCard()}"/>
+            <f:viewAction action="#{userGroupsCardBean.onAfterFormLoad()}"/>
+        </f:metadata>
+    </ui:define>
+    
     <ui:param name="_bean" value="#{userGroupsCardBean}"/>
 
     <ui:define name="extColumnsRights">
