--- a/escom-bpm-web/src/main/webapp/view/users/user-explorer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/users/user-explorer.xhtml
@@ -1,9 +1,17 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
-                xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-                template="/view/templ/templ-explorer.xhtml"
+                xmlns:ui="http://xmlns.jcp.org/jsf/facelets"               
                 xmlns:h="http://xmlns.jcp.org/jsf/html"
-                xmlns:p="http://primefaces.org/ui">
+                xmlns:p="http://primefaces.org/ui"
+                xmlns:f="http://xmlns.jcp.org/jsf/core"
+                template="/view/templ/templ-explorer.xhtml">
 
+    <ui:define name="preRendered">
+        <f:metadata>            
+            <f:viewAction action="#{explorerTreeBean.onBeforeOpenCard()}"/>
+            <f:viewAction action="#{explorerTreeBean.onAfterFormLoad()}"/>
+        </f:metadata>
+    </ui:define>
+        
     <ui:param name="_explorerBean" value="#{explorerTreeBean}" />
     <ui:param name="_detailBean"  value="#{userBean}"/>
     <ui:param name="_treeBean"    value="#{userGroupsBean}"/>
