Доработка таймера процесса

--- a/escom-bpm-web/src/main/webapp/view/errors/404.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/errors/404.xhtml
@@ -10,12 +10,12 @@
     <ui:define name="body">
         <h:form >          
             <p:panel styleClass="panelLogin">
-                <p:panelGrid id="panelLogin" columns="2" columnClasses="ui-grid-col-2, ui-grid-col-10">
+                <h:panelGrid id="panelLogin" columns="2">
                     <p:graphicImage name="/images/escom_logo.jpg"  />
                     <h2>#{bundle.Error} 404</h2>
                     <p:spacer/>
                     <h3>#{bundle.PageNotFound}</h3>
-                </p:panelGrid>
+                </h:panelGrid>
             </p:panel>            
         </h:form> 
     </ui:define>
