--- a/escom-bpm-web/src/main/webapp/view/processes/elements/exit-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/processes/elements/exit-card.xhtml
@@ -33,7 +33,7 @@
                     
                     <p:separator/>
                     <p:commandButton value="#{bundle.Save}" update="centerFRM"
-                                     action="#{_bean.onCloseCard('save')}" style="float: right;">
+                                     action="#{exitCardBean.onCloseCard('save')}" style="float: right;">
                         <f:param name="isRequired" value="true"/>
                     </p:commandButton>
                 </p:panelGrid>
