--- a/escom-bpm-web/src/main/webapp/view/sys/activate.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/sys/activate.xhtml
@@ -74,23 +74,31 @@
 
                     <p:panelGrid rendered="#{applicationBean.licence != null}" styleClass="ui-panelgrid-blank">
                         <h2>#{bundle.ProgramActivated}</h2>
+                        <p:outputLabel value="#{bundle.LicenceNumber}:" />
+                        <p:inputMask value="#{activateAppBean.licNumber}"
+                                 mask="999-999-999.9999"
+                                 disabled="true"
+                                 styleClass="ui-grid-col-9"/>
                         <p:spacer/>
                         <p:commandButton value="#{bundle.EnterProgram}"
                                          actionListener="#{activateAppBean.onEnterApp()}"/>
                     </p:panelGrid>
-                    <p:outputLabel value="#{bundle.LicenceNumber}:" />
-                    <p:inputMask value="#{activateAppBean.licNumber}"
-                                 mask="999-999-999.9999"
-                                 required="true" requiredMessage="#{bundle.Field} [#{bundle.LicenceNumber}] #{bundle.MustBeFilled}"
-                                 styleClass="ui-grid-col-9"/>
-                    <p:spacer/>
-                    <p:outputLabel value="#{bundle.Attention}" />
-                    <h:outputLabel value="#{msg.ComputerMastConnectToInternet}" />
-                    <p:spacer/>
-                    <p:commandButton id="btnLogin" value="#{bundle.Activate}" title="#{bundle.ActivateLicense}"
-                                     actionListener="#{activateAppBean.onActivate()}"
-                                     onstart="PF('statusDialog').show();"
-                                     oncomplete="PF('statusDialog').hide();"/>
+                    
+                    <p:panelGrid rendered="#{applicationBean.licence == null}" styleClass="ui-panelgrid-blank">
+                        <p:outputLabel value="#{bundle.LicenceNumber}:" />
+                        <p:inputMask value="#{activateAppBean.licNumber}"
+                                     mask="999-999-999.9999"
+                                     required="true" requiredMessage="#{bundle.Field} [#{bundle.LicenceNumber}] #{bundle.MustBeFilled}"
+                                     styleClass="ui-grid-col-9"/>
+                        <p:spacer/>
+                        <p:outputLabel value="#{bundle.Attention}" />
+                        <h:outputLabel value="#{msg.ComputerMastConnectToInternet}" />
+                        <p:spacer/>
+                        <p:commandButton id="btnLogin" value="#{bundle.Activate}" title="#{bundle.ActivateLicense}"
+                                         actionListener="#{activateAppBean.onActivate()}"
+                                         onstart="PF('statusDialog').show();"
+                                         oncomplete="PF('statusDialog').hide();"/>
+                    </p:panelGrid>
                 </p:panelGrid>
             </p:panel>
             <p:remoteCommand name="activateLicence" action="#{activateAppBean.activateLicence()}"/>
