--- a/escom-bpm-web/src/main/webapp/view/templ/templ-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/templ/templ-card.xhtml
@@ -13,12 +13,12 @@
     </ui:define>
 
     <ui:define name="body">        
-        
+
         <p:importConstants type="com.maxfill.dictionary.DictRights"   var="DictRights" />
         <p:importConstants type="com.maxfill.dictionary.DictStates"   var="DictStates" />
         <p:importConstants type="com.maxfill.dictionary.DictEditMode" var="DictEditMode" />
         <p:importConstants type="com.maxfill.dictionary.DictModules"  var="DictModules" />
-         
+
         <script type="text/javascript" >
             var itemChange = 0;
 
@@ -29,9 +29,9 @@
                 }
             } 
         </script> 
-        
+
         <ui:insert name="card_scripts"/>
-        
+
         <style>  
             .ui-tabs-left>.ui-tabs-nav{
                 width: 15%;
@@ -52,88 +52,85 @@
             }
         </style>
 
-        <pe:layout fullPage="true" options="#{_bean.layoutOptions}" rendered="#{_bean.editedItem != null}">
-            <p:ajax event="resize" listener="#{_bean.handleResize}"/>            
-            
-            <pe:layoutPane id="center" position="center" resizable="true">
-                <h:form id="#{_frm}" style="font-size: 90%; height: 100%;" >                    
-                    <ui:insert name="form_scripts"/> 
-                    <p:focus context="#{_frm}:mainTabView" for="#{_frm}:mainTabView:nameItem"/>
-                    
-                    <p:panelGrid columns="1" columnClasses="ui-grid-col-12 col-padding" styleClass="ui-grid-col-12 without-spaces">                                                
+        <h:form id="#{_frm}" style="font-size: 90%; height: 100%;" >                    
+            <ui:insert name="form_scripts"/> 
+            <p:focus context="#{_frm}:mainTabView" for="#{_frm}:mainTabView:nameItem"/>
 
-                        <p:menubar styleClass="without-spaces" autoDisplay="false">
-                            <p:submenu label="#{bundle.Actions}" icon="ui-icon-gear" styleClass="submenu">
-                                <ui:insert name="specActionMenu" />
-                                <p:separator />
-                                <p:menuitem icon="ui-icon-star" value="#{bundle.AddToFavorites}"
-                                            disabled="#{_bean.editedItem.id == null}"
-                                            actionListener="#{_bean.addInFavorites(_bean.editedItem)}"/>
-                                <p:separator />
-                                <p:menuitem value="#{bundle.SaveClose}"
-                                            rendered="#{!_bean.isReadOnly()}"
-                                            icon="ui-icon-circle-check"
-                                            onclick="document.getElementById('#{_frm}:btnSaveClose').click();">
-                                </p:menuitem>
-                                <p:separator />
-                                <p:menuitem icon="ui-icon-circle-close" value="#{bundle.Close}"
-                                            onclick="document.getElementById('#{_frm}:btnCancel').click();">
-                                </p:menuitem>
-                            </p:submenu>
-                            <p:submenu label="#{bundle.Print}" icon="ui-icon-print" styleClass="submenu">
-                                <p:menuitem icon="ui-icon-print" value="#{bundle.PrintCardItem}"
-                                            disabled="#{_bean.editedItem.id == null}"
-                                            actionListener="#{_bean.onPreViewItemCard()}"/>
-                                <p:menuitem icon="ui-icon-print" value="#{bundle.PrintBarCode}"
-                                            disabled="#{_bean.editedItem.id == null}"
-                                            actionListener="#{_bean.onPreViewBarcode()}"/>
-                            </p:submenu>
-                            <ui:insert name="specSubMenu" />
-                            <p:menuitem id="btnSaveClose" value="#{bundle.SaveClose}"
-                                        rendered="#{!_bean.isReadOnly()}"
-                                        icon="ui-icon-circle-check"
-                                        update="#{_frm}"
-                                        actionListener="#{_bean.prepSaveItemAndClose()}"
-                                        onclick="if (itemChange == 1) {
+            <p:panelGrid columns="1" columnClasses="ui-grid-col-12 col-padding" styleClass="ui-grid-col-12 without-spaces" rendered="#{_bean.editedItem != null}">
+
+                <p:menubar styleClass="without-spaces" autoDisplay="false">
+                    <p:submenu label="#{bundle.Actions}" icon="ui-icon-gear" styleClass="submenu">
+                        <ui:insert name="specActionMenu" />
+                        <p:separator />
+                        <p:menuitem icon="ui-icon-star" value="#{bundle.AddToFavorites}"
+                                    disabled="#{_bean.editedItem.id == null}"
+                                    actionListener="#{_bean.addInFavorites(_bean.editedItem)}"/>
+                        <p:separator />
+                        <p:menuitem value="#{bundle.SaveClose}"
+                                    rendered="#{!_bean.isReadOnly()}"
+                                    icon="ui-icon-circle-check"
+                                    onclick="document.getElementById('#{_frm}:btnSaveClose').click();">
+                        </p:menuitem>
+                        <p:separator />
+                        <p:menuitem icon="ui-icon-circle-close" value="#{bundle.Close}"
+                                    onclick="document.getElementById('#{_frm}:btnCancel').click();">
+                        </p:menuitem>
+                    </p:submenu>
+                    <p:submenu label="#{bundle.Print}" icon="ui-icon-print" styleClass="submenu">
+                        <p:menuitem icon="ui-icon-print" value="#{bundle.PrintCardItem}"
+                                    disabled="#{_bean.editedItem.id == null}"
+                                    actionListener="#{_bean.onPreViewItemCard()}"/>
+                        <p:menuitem icon="ui-icon-print" value="#{bundle.PrintBarCode}"
+                                    disabled="#{_bean.editedItem.id == null}"
+                                    actionListener="#{_bean.onPreViewBarcode()}"/>
+                    </p:submenu>
+                    <ui:insert name="specSubMenu" />
+                    <p:menuitem id="btnSaveClose" value="#{bundle.SaveClose}"
+                                rendered="#{!_bean.isReadOnly()}"
+                                icon="ui-icon-circle-check"
+                                update="#{_frm}"
+                                actionListener="#{_bean.prepSaveItemAndClose()}"
+                                onclick="if (itemChange == 1) {
                                                     onChangeItem();
-                                                }">
-                                <f:param name="isRequired" value="true"/>
-                            </p:menuitem>
-                            <f:facet name="options">
-                                <ui:insert name="specToolButtons"/>
-                                <p:spacer width="10" />
-                                <p:commandButton id="btnCancel" title="#{bundle.CloseCard}"
-                                                     actionListener="#{_bean.onCancelItemSave()}"
-                                                     icon="ui-icon-circle-close"
-                                                     onclick="if (itemChange == 1) onChangeItem();">
-                                    <p:ajax event="dialogReturn" listener="#{_bean.onFinalCancelSave}"/>
-                                </p:commandButton> 
-                            </f:facet>
-                        </p:menubar>
-                        
-                        <p:messages id="messages" showDetail="false" closable="true" styleClass="ui-panelgrid-blank ui-grid-col-12 without-spaces">
-                            <p:autoUpdate />
-                        </p:messages>
-                        
-                        <p:tabView orientation="left" id="mainTabView" styleClass="ui-grid-col-12 col-padding" 
-                                   activeIndex="#{_bean.tabActiveIndex}" dynamic="true">
-                            <p:ajax event="tabChange" listener="#{_bean.onTabChange}" />
-                            <ui:insert name="page_body"/>
-                            <ui:include src="/view/common/dict-rights.xhtml"/>
-                            <ui:insert name="childs_rights"/> 
-                            <ui:include src="/view/common/dict-info.xhtml"/>
-                            <ui:include src="/view/common/dict-log.xhtml"/> 
-                        </p:tabView>                         
-                    </p:panelGrid>
+                                        }">
+                        <f:param name="isRequired" value="true"/>
+                    </p:menuitem>
+                    <f:facet name="options">
+                        <ui:insert name="specToolButtons"/>
+                        <p:spacer width="10" />
+                        <p:commandButton id="btnCancel" title="#{bundle.CloseCard}"
+                                         actionListener="#{_bean.onCancelItemSave()}"
+                                         icon="ui-icon-circle-close"
+                                         onclick="if (itemChange == 1)
+                                                     onChangeItem();">
+                            <p:ajax event="dialogReturn" listener="#{_bean.onFinalCancelSave}"/>
+                        </p:commandButton> 
+                    </f:facet>
+                </p:menubar>
 
-                    <ui:include src="/view/common/confirm-dlg.xhtml" />
-                    <p:remoteCommand name="onChangeItem" immediate="true" 
-                                     actionListener="#{_bean.onItemChange()}"
-                                     oncomplete="return itemChange = 0;"/> 
+                <p:messages id="messages" showDetail="false" closable="true" styleClass="ui-panelgrid-blank ui-grid-col-12 without-spaces">
+                    <p:autoUpdate />
+                </p:messages>
+
+                <p:tabView orientation="left" id="mainTabView" styleClass="ui-grid-col-12 col-padding" 
+                           activeIndex="#{_bean.tabActiveIndex}" dynamic="true">
+                    <p:ajax event="tabChange" listener="#{_bean.onTabChange}" />
                     
-                </h:form> 
-            </pe:layoutPane>
-        </pe:layout>
+                    <ui:insert name="page_body"/>
+                    <ui:include src="/view/common/dict-rights.xhtml"/>
+                    <ui:insert name="childs_rights"/> 
+                    <ui:include src="/view/common/dict-info.xhtml"/>
+                    <ui:include src="/view/common/dict-log.xhtml"/> 
+                </p:tabView>                         
+            </p:panelGrid>
+
+            <ui:include src="/view/common/confirm-dlg.xhtml" />
+            <p:remoteCommand name="onChangeItem" immediate="true" 
+                             actionListener="#{_bean.onItemChange()}"
+                             oncomplete="return itemChange = 0;"/> 
+            <p:remoteCommand name="formSize" actionListener="#{_bean.onFormSize()}"/>
+
+        </h:form> 
         
         <ui:include src="/view/sys/noSaveDlg.xhtml" />
         <ui:include src="/view/common/error-dlg.xhtml"/>
